[FIX]Agregando el campo descuentos por linea de producto a la vista de formulario de la orden de compra

--- a/addons/eor_purchase/views/purchase_view.xml
+++ b/addons/eor_purchase/views/purchase_view.xml
@@ -36,6 +36,9 @@
                 <field name="discount" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </field>
+                <xpath expr="//field[@name='amount_untaxed']" position="before">
+                    <field name="total_desc" widget="monetary" class="oe_right"/>
+                </xpath>
                 <xpath expr="//group[hasclass('oe_subtotal_footer')]/group[hasclass('oe_right')]" position="before">
 <!--                    <group colspan="4" col="6" class="oe_subtotal_footer">-->
                         <group string="Descuentos Extra" col="6">
