--- a/addons/cdfi_invoice/report/payment_report.xml
+++ b/addons/cdfi_invoice/report/payment_report.xml
@@ -56,6 +56,14 @@
 		<template id="report_payment_document">
 			<t t-call="cdfi_invoice.cfdi_payment_layout">
 				<t t-set="o" t-value="o.with_context({'lang':o.partner_id.lang})" />
+				<style>
+					.page {
+					font-family: Arial, Verdana, sans-serif !important;
+					}
+					.page *{
+					font-family: inherit !important;
+					}
+				</style>
 				<div class="page" style="padding-top: 10px; font-size=15px;">
 					<div class="row"  >
 
