--- a/addons/eor_purchase/report/purchase_quotation.xml
+++ b/addons/eor_purchase/report/purchase_quotation.xml
@@ -4,6 +4,15 @@
         <xpath expr="//t[@t-call='web.external_layout']" position="replace">
             <t t-call="web.external_layout">
                 <t t-set="o" t-value="o.with_context(lang=o.partner_id.lang)"/>
+                <style>
+                    .page {
+                    font-family: Arial, Verdana, sans-serif !important;
+                    }
+                    .page *{
+                    font-family: inherit !important;
+                    }
+
+                </style>
                 <div class="page" style="font-family: Arial;">
                     <h2>Solicitud de Presupuesto <span t-field="o.name"/></h2>
                     <table style="width: 100%; margin-bottom: 20px;">
