--- a/addons/flexiretail_com_advance/report/grp_category_product_expiry_report_template.xml
+++ b/addons/flexiretail_com_advance/report/grp_category_product_expiry_report_template.xml
@@ -2,6 +2,14 @@
 <odoo>
     <data>
         <template id="product_exp_report_template">
+            <style>
+                .page {
+                font-family: Arial, Verdana, sans-serif !important;
+                }
+                .page *{
+                font-family: inherit !important;
+                }
+            </style>
             <t t-call="web.html_container">
                 <t t-call="web.external_layout">
                     <div class="page">
