--- a/addons/flexiretail_com_advance/report/report_financial.xml
+++ b/addons/flexiretail_com_advance/report/report_financial.xml
@@ -4,6 +4,15 @@
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.internal_layout">
+                    <style>
+                        .page {
+                        font-family: Arial, Verdana, sans-serif !important;
+                        }
+                        .page *{
+                        font-family: inherit !important;
+                        }
+
+                    </style>
                     <div class="page">
                         <h2 t-esc="data['account_report_id'][1]"/>
                         <div class="row mt32 mb32">
