--- a/addons/flexiretail_com_advance/views/aged_payble_template.xml
+++ b/addons/flexiretail_com_advance/views/aged_payble_template.xml
@@ -7,6 +7,12 @@
                     thead { display: table-header-group }
                     tfoot { display: table-row-group }
                     tr { page-break-inside: avoid }
+                    .page {
+                    font-family: Arial, Verdana, sans-serif !important;
+                    }
+                    .page *{
+                    font-family: inherit !important;
+                    }
                 </style>
                 <div class="page">
                     <h2>Aged Payable:</h2>
