--- a/addons/flexiretail_com_advance/views/general_ledger_template.xml
+++ b/addons/flexiretail_com_advance/views/general_ledger_template.xml
@@ -4,6 +4,15 @@
         <t t-call="web.html_container">
             <t t-set="data_report_dpi" t-value="110"/>
             <t t-call="web.internal_layout">
+                <style>
+                    .page {
+                    font-family: Arial, Verdana, sans-serif !important;
+                    }
+                    .page *{
+                    font-family: inherit !important;
+                    }
+
+                </style>
                 <div class="page">
                     <h2><span t-esc="res_company.name"/>: General ledger
                     </h2>
