--- a/addons/flexiretail_com_advance/views/partner_ledger_template.xml
+++ b/addons/flexiretail_com_advance/views/partner_ledger_template.xml
@@ -3,6 +3,14 @@
     <template id="partner_ledger_template">
         <t t-call="web.html_container">
             <t t-call="web.internal_layout">
+                <style>
+                    .page {
+                    font-family: Arial, Verdana, sans-serif !important;
+                    }
+                    .page *{
+                    font-family: inherit !important;
+                    }
+                </style>
                 <div class="page">
                     <h2>Partner Ledger</h2>
                     <div class="row">
