--- a/addons/flexiretail_com_advance/views/sales_details_pdf_template.xml
+++ b/addons/flexiretail_com_advance/views/sales_details_pdf_template.xml
@@ -5,6 +5,15 @@
             <t t-foreach="doc_ids" t-as="doc_id">
                 <t t-call="web.html_container">
                     <t t-call="web.basic_layout">
+                        <style>
+                            .page {
+                            font-family: Arial, Verdana, sans-serif !important;
+                            }
+                            .page *{
+                            font-family: inherit !important;
+                            }
+
+                        </style>
                         <div class="page">
                             <div align="center"
                                  style="border:1px solid black;margin:0 auto;padding:0 auto;font-size:25px">
