--- a/addons/flexiretail_com_advance/views/tax_report_template.xml
+++ b/addons/flexiretail_com_advance/views/tax_report_template.xml
@@ -3,6 +3,15 @@
     <template id="tax_report_template">
         <t t-call="web.html_container">
             <t t-call="web.internal_layout">
+                <style>
+                    .page {
+                    font-family: Arial, Verdana, sans-serif !important;
+                    }
+                    .page *{
+                    font-family: inherit !important;
+                    }
+
+                </style>
                 <div class="page">
                     <h3>Tax Report</h3>
                     <div class="col-xs-4">
