--- a/addons/flexiretail_com_advance/views/trial_balance_template.xml
+++ b/addons/flexiretail_com_advance/views/trial_balance_template.xml
@@ -3,6 +3,15 @@
 <template id="trial_balance_template">
     <t t-call="web.html_container">
         <t t-call="web.internal_layout">
+            <style>
+                .page {
+                font-family: Arial, Verdana, sans-serif !important;
+                }
+                .page *{
+                font-family: inherit !important;
+                }
+
+            </style>
             <div class="page">
                 <h2><span t-esc="res_company.name"/>: Trial Balance</h2>
                 <div class="row mt32">
