[FIX]Se añadio el porciento de costo de traspazo al campo amount_transfer_fee de la plantilla del reporte ITC de ventas. [FIX]Se le dió formato de moneda al campo anterior. [FIX]Se actualizó las dependencias del módulo eor.sale para depender del Intercompany.

--- a/addons/eor_sale/report/sale_order.xml
+++ b/addons/eor_sale/report/sale_order.xml
@@ -423,10 +423,13 @@
                                     </tr>
                                     <tr style="border-bottom:1px solid #dddddd;">
                                         <td>
-                                            <span>Cargo por Traspaso</span>
+                                            <span>Cargo por Traspaso(</span>
+                                            <span t-field="doc.transfer_fee_id"/>
+                                            <span>%)</span>
                                         </td>
                                         <td class="text-right">
-                                            <span t-field="doc.amount_transfer_fee"/>
+                                            <span t-field="doc.amount_transfer_fee"
+                                                  t-options="{'widget': 'monetary', 'display_currency': doc.company_id.currency_id}"/>
                                         </td>
                                     </tr>
                                     <tr class="border-black">
