--- a/addons/eor_sale/report/sale_order.xml
+++ b/addons/eor_sale/report/sale_order.xml
@@ -548,12 +548,14 @@
                     <span t-field="doc.name"/>
                 </div>
             </h2>
-            <h5 style="display: inline-block; width: 50%; text-align: right;">
+            <h2 style="display: inline-block; width: 50%;text-align: right;">
+<!--            <h5 style="display: inline-block; width: 50%; text-align: right;">-->
                 <div t-if="doc.intercompany_transfer_id">
-                    <strong>Ref ICT:</strong>
+<!--                    <strong>Ref ICT:</strong>-->
                     <p t-field="doc.intercompany_transfer_id"/>
                 </div>
-            </h5>
+<!--            </h5>-->
+            </h2>
         </div>
 
         <div class="article o_report_layout_standard">
