[FIX] RFC ejemplo : RFC : GAG110802CZ9 [FIX] agregar el campo de numero telefónico

--- a/addons/eor_sale/report/sale_order.xml
+++ b/addons/eor_sale/report/sale_order.xml
@@ -301,7 +301,10 @@
                             <span t-field="doc.company_id.partner_id.zip"/>
                         </div>
                         <div>
-                            <span t-field="doc.company_id.rfc"/>
+                            RFC: <span t-field="doc.company_id.rfc"/>
+                        </div>
+                        <div>
+                            <span>Teléfono:</span>&#160;<span t-field="doc.company_id.phone"/>
                         </div>
                     </div>
                     <div class="col-4">
