[FIX] Terminos y condiciones Esta leyenda debe ir centrada y en cursive, en la orden de venta

--- a/addons/eor_purchase/report/purchase_order.xml
+++ b/addons/eor_purchase/report/purchase_order.xml
@@ -544,7 +544,11 @@
                         </tr>
                     </tbody>
                 </table>
-                <!--                <span t-field="o.note"/>-->
+
+<!--                <div class="row" style="text-align:center; font-style: italic">-->
+<!--                    <t t-esc="o.note"/>-->
+<!--                </div>-->
+
                 <div class="separator-space-20">
                     <table id="devolution-table">
                         <thead>
