[FIX] En el apartado de la ficha de productos en los impuestos de ventas y compras filtrar que solo muestre los impuestos de la compañia que esta seleccionada

--- a/addons/flexiretail_com_advance/views/product_view.xml
+++ b/addons/flexiretail_com_advance/views/product_view.xml
@@ -65,6 +65,9 @@
                     <label for="is_packaging"/>
                 </div>
             </field>
+            <field name="taxes_id" position="attributes">
+                <attribute name="context">{'filter_by_selected_company_id': 1}</attribute>
+            </field>
         </field>
     </record>
 
@@ -94,6 +97,9 @@
                     <field string="Expired" name="expired" widget="statinfo"/>
                 </button>
             </button>
+            <field name="taxes_id" position="attributes">
+                <attribute name="context">{'filter_by_selected_company_id': 1}</attribute>
+            </field>
         </field>
     </record>
 
